--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -29,10 +29,6 @@ p {
 	margin: 20px 0;
 }
 
-.carousel {
-	padding: 0 10%;
-	margin: 20px 0;
-}
 
 .image {
 	border-radius: 4px;
